<resources>
    <string name="app_name">ContadorCOVID</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registrar_usuario">REGISTRAR USUARIO</string>
    <string name="ya_tengo_una_cuenta">Ya tengo una cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
</resources>