<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ProfileActivity">

    <TextView
    android:id="@+id/textViewName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/nombre_de_usuario"
    android:textAlignment="center"
    android:textSize="25sp"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btnSingOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/design_default_color_on_primary"
        android:text="@string/cerrar_sesi_n"
        android:textColor="#757575" />

</LinearLayout>